--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:2.4.1"
+
+    //Sidebar navigation
+    implementation 'com.google.android.material:material:1.2.0-aplha04'
 }
