--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ManageU">
         <activity
+            android:name=".ScratchCardUI"
+            android:exported="false" />
+        <activity
             android:name=".FocusTimer.TimerActivity"
             android:exported="false" />
         <activity
@@ -26,7 +29,7 @@
         <activity
             android:name=".TaskActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".CalendarActivity"
             android:configChanges="orientation|screenSize"
