top recommendations added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -17,16 +19,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ManageU">
         <activity
+            android:name=".recommender"
+            android:exported="false" />
+        <activity
             android:name=".FocusTimer.TimerActivity"
             android:exported="false" />
-
         <activity
             android:name=".ScratchCardUI"
             android:exported="false" />
         <activity
             android:name=".UsageStatsActivity"
             android:exported="false" />
-
         <activity
             android:name=".Music.GenreActivity"
             android:exported="false" />
@@ -37,7 +40,7 @@
         <activity
             android:name=".TaskActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".CalendarActivity"
             android:configChanges="orientation|screenSize"
